# lifehon

./: .env  .env.example  .gitignore  Cargo.toml  README.md  habi_errors.md  hapi_errors.md
migrations/: 20240604175122_init.down.sql  20240604175122_init.up.sql
scripts/: init-db.sh
src/: main.rs
src/front_api/: gql_auth.rs  mod.rs
src/front_api/gql_guards/: mod.rs
src/front_api/gql_models/: hobby_gql_model.rs  mod.rs  task_gql_model.rs  user_gql_model.rs
src/front_api/gql_mutations/: login_gql_mutations.rs  mod.rs  task_gql_mutations.rs  user_gql_mutations.rs
src/front_api/gql_query/: hobby_query.rs  login_query.rs  mod.rs  user_query.rs
src/front_api/utils/: mod.rs
src/hobby_api/: habi_hobby.rs  habi_task.rs  habi_user.rs  hapi_auth.rs  hapi_hobby.rs  hapi_hobby_auth.rs  hapi_task.rs  hapi_user.rs  mod.rs
src/hobby_api/errors/: mod.rs
src/hobby_api/validation/: mod.rs  task_validation.rs  user_validation.rs
src/psql/: hobby_psql_model.rs  mod.rs  task_psql_model.rs  user_psql_model.rs
src/services/: mod.rs  site_service.rs
