[package]
name = "lifehon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
async-graphql =  { version = "7.0.5", default-features = false ,  features = ["tokio", "playground"]}
async-graphql-axum = "7.0.5"
sqlx = { version = "0.7.3", features = [ "uuid", "postgres",  "macros", "chrono", "runtime-async-std"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tokio = { version = "1.35.1", features = ["fs" , "full"] }
strfmt = "0.2.4"