[package]
name = "lifehon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
async-graphql =  { version = "7.0.5", default-features = false ,  features = ["tokio", "playground", "chrono", "uuid"]}
async-graphql-axum = "7.0.5"
sqlx = { version = "0.7.3", features = [ "uuid", "postgres",  "macros", "chrono", "runtime-async-std"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tokio = { version = "1.35.1", features = ["fs" , "full", "rt"] }
strfmt = "0.2.4"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.117"
env_logger = "0.11.3"
log = "0.4.21"
jsonwebtoken = "9.3.0"
validator = { version = "0.18.1", features = ["derive"] }
axum-valid = "0.18.0"
